[tool.poetry]
name = "transaction-analyzer"
version = "0.1.0"
description = "Analysis of bank transactions"
authors = ["annak <annakuksofficial@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.0.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
openpyxl = "^3.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-mock = "^3.11.0"
flake8 = "^6.1.0"
black = "^23.0.0"
isort = "^5.12.0"
mypy = "^1.5.0"

[tool.black]
line-length = 119
exclude = '''
/(
    \.git
)/
'''

[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv'

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"


